# AutCodingChallenge

./: .gitignore  README.md  pyproject.toml
src/xpeel/: __init__.py  driver.py  exceptions.py  protocol.py
tests/: conftest.py  test_errors.py  test_framing.py  test_init.py  test_peel.py  test_protocol.py  test_tape.py  test_unsolicited.py
